--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "@types/react-grid-layout": "^1.3.5",
+    "@types/papaparse": "^5.3.14",
     "autoprefixer": "10.4.15",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.0",
@@ -64,6 +65,7 @@
     "next": "13.5.1",
     "next-themes": "^0.3.0",
     "openai": "^5.12.2",
+    "papaparse": "^5.4.1",
     "pg": "^8.16.3",
     "postcss": "8.4.30",
     "react": "18.2.0",
